[package]
name = "mjau"
version = "1.0.0"
authors = ["Caroline <cawibo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", features = ["blocking", "json"] }
select = ""
chrono = ""
directories = "2.0.2"
url = ""